📝 계획 💡PR 예정 핵심적으로 변경된 사항 - 필수 Service, Controller, Repository, Entity, DTO 계층 작성 완료 - 리스트를 조회할 때에는 와이어프레임을 참고하여 한 page당 최대 4개씩 조회가 가능하게끔 작성하였습니다. - Space -> SpaceChore 참조 형태로 변경, 다대다 관계를 형성하게 하기 위함. - Service Test, Controller Test 성공 케이스 작성 완료 - Entity를 노출하는 로직으로부터 DTO Class를 사용하여 캡슐화를 진행하는 로직으로 변경하였습니다. -> 각 Test코드까지 작성 완료, API Response 확인 후 pull Request 진행 예정
To Do
- Service Test 실패 케이스 작성 및 CustomException 적용
- API 테스트 확인 및 데이터 형식 작성( data, Error 매핑 없도록 작성해야 됨 )

📢이외 추가 변경 부분 및 기타
- Chore Entity Space Parameter 변경 (String -> Space)
✅ 테스트
 테스트 코드 작성 완료 -> 작성 예정
 API 테스트 진행 완료 -> 진행 예정